--- a/css/styles.css
+++ b/css/styles.css
@@ -172,10 +172,11 @@ ul {
 
 /* ============================== */
        /*hero image section 1 */
-.hero-image {
+.hero-image {   
     background-color: var(--dark-background-color-1);
     padding-top: 188px;
-    padding-bottom: 188px;        
+    padding-bottom: 188px;
+    background-image: url(../images/hero-image-section-1/people-office-1.png);
     }
 
 .hero-title {   
