--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ ul {
     background-color: var(--dark-background-color-1);
     padding-top: 188px;
     padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-image-section-1/people-office-1.png);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-image-section-1/people-office-1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
