--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ ul {
     padding-left: 0px;
 }
 
-.icon-1-container {
+.icon-container {
     display: flex;
     align-items: center;
     justify-content: center;
