--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,9 @@ ul {
     flex-basis: calc((100% - 72px) / 4);
     background: var(--background-color-basic);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .item-name-team {
@@ -457,6 +460,9 @@ ul {
     color: var(--button-text-color-2);
     background-color: var(--button-change-color-1);
     border: 1px solid transparent;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+                0px 2px 1px rgba(0, 0, 0, 0.08),
+                0px 2px 2px rgba(0, 0, 0, 0.12);
 }
     /* Filters button section 1 */
 /* =============================== */
