--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,7 @@ ul {
     cursor: pointer;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .hero-image-button:hover, 
