--- a/css/styles.css
+++ b/css/styles.css
@@ -490,8 +490,8 @@ ul {
     border-top: none;    
 }
 
-.project-card-container-item:hover,
-.project-card-container-item:focus{
+.project-card-item:hover,
+.project-card-item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
                 0px 1px 1px rgba(46, 47, 66, 0.16),
                 0px 2px 1px rgba(46, 47, 66, 0.08);
