--- a/css/styles.css
+++ b/css/styles.css
@@ -393,9 +393,11 @@ ul {
     height: 40px;
     background-color: #4D5AE5;
     border-radius: 50%;
-
 }
 
+.socials-icon {
+    fill: currentColor;
+}
 
          /* section 4 */
 /* =============================== */
