--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,7 @@ ul {
 
 
 /* =============================== */
-         /*  section 2  */
+     /*  features section 2  */
 
 
 .features {
@@ -297,12 +297,12 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-/* ===== section 2 ===== */
+    /* features section 2 */
 /* =============================== */
 
 
 /* =============================== */
-/* ===== section 3 ===== */
+        /*  section 3  */
 
 .doing-section {
     padding-bottom: 120px;
@@ -325,12 +325,12 @@ ul {
 .item-doing-section {
     width: 360px;
 }
-/* ===== section 3 ===== */
+        /* section 3  */
 /* =============================== */
 
 
 /* =============================== */
-/* ===== section 4 ===== */
+        /* section 4 */
 
 .team {
     padding: 120px 0;        
