--- a/css/styles.css
+++ b/css/styles.css
@@ -442,8 +442,7 @@ ul {
     border-radius: 4px;    
     align-items: center;
     justify-content: center;
-    gap: 24px
-   
+    gap: 24px;   
 }
 
 
