--- a/css/styles.css
+++ b/css/styles.css
@@ -435,7 +435,6 @@ ul {
     gap: 24px;
 }
 
-
 .clients-container {
     display: flex;
     height: 88px;
@@ -447,7 +446,10 @@ ul {
     width: calc((100% - 120px) / 6);
 }
 
-
+.clients-link {
+    width: 100%;
+    height: 100%;
+}
  
 
         /* customers section 5 */
