--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,9 @@
 --socials-icon-background-hover-focus: #404BBF;
 --socials-icon-color-1: #f4f4fd;
 
+--clients-icon-color-1: #8e8f99;
+--clients-icon-color-hover-focus: #404BBF;
+
 
 }
 
@@ -416,7 +419,6 @@ ul {
 /* =============================== */
         /* customers section 5 */
 
-
 .customers-section {
     padding: 120px 0;
 }
@@ -430,11 +432,11 @@ ul {
     text-transform: capitalize;
     color: var(--dark-text-color-1);
 }
+
 .clients-list {
     display: flex;
     justify-content: center;
     gap: 24px;
-    
 }
 
 .clients-container {   
@@ -446,26 +448,22 @@ ul {
     display: flex;
     width: 100%;
     height: 100%;
-    border: 1px solid #8e8f99;
+    border: 1px solid var(--clients-icon-color-1);
     border-radius: 4px;
     align-items: center;
     justify-content: center;
-    color: #8e8f99;
+    color: var(--clients-icon-color-1);
 }
  
-
 .clients-link:hover,
 .clients-link:focus {
-    border-color: #404bbf;
-    color: #404bbf;
+    border-color: var(--clients-icon-color-hover-focus);
+    color: var(--clients-icon-color-hover-focus);
 }
  
 .clients-icon {
     fill: currentColor;
 }
-
-
-
         /* customers section 5 */
 /* =============================== */     
 
