--- a/css/styles.css
+++ b/css/styles.css
@@ -474,6 +474,12 @@ ul {
     padding: 100px 0;
 }
 
+.footer-container {
+    display: flex;
+    align-items: baseline;
+    margin-right: 120px;
+}
+
 .footer-section-text {  
     font-size: 16px;
     line-height: 24px;
