--- a/css/styles.css
+++ b/css/styles.css
@@ -482,7 +482,8 @@ ul {
 .footer-container {
     display: flex;
     align-items: baseline;
-    }
+    gap: 120px
+}
 
 .footer-section-text {  
     font-size: 16px;
@@ -517,7 +518,7 @@ ul {
 }
 
 .footer-logo-container {
-    margin-right: 120px;
+   
 }
 
 .footer-socials-link {
