--- a/css/styles.css
+++ b/css/styles.css
@@ -399,12 +399,17 @@ ul {
     gap: 24px;
 }
 
+.socials-item {
+    width: 40px;
+    height: 40px;
+}
+
 .socials-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     background-color: var(--socials-icon-background-color-1);
     border-radius: 50%;
 }
@@ -522,12 +527,18 @@ ul {
     color: var(--logo-color-3);
 }
 
+.footer-socials-item {
+    width: 40px;
+    height: 40px;
+}
+
+
 .footer-socials-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 100;
+    height: 100;
     background-color: var(--footer-socials-icon-background-color-1);
     border-radius: 50%;
 }
