--- a/css/styles.css
+++ b/css/styles.css
@@ -537,8 +537,8 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100;
-    height: 100;
+    width: 100%;
+    height: 100%;
     background-color: var(--footer-socials-icon-background-color-1);
     border-radius: 50%;
 }
